2005-09-02 Flavien Bridault <disk@sourcemage.org>
	* DETAILS: Corrected SOURCE_URL[0], added two more

2005-08-27 George Sherwood <george@beernabeer.com>
	* DETAILS: Updated to 1.0pre7try2

2005-06-03 Arwed v. Merkatz <v.merkatz@gmx.net>
	* BUILD: only apply mplayer-headers.patch to non cvs version

2005-05-11 Arwed v. Merkatz <v.merkatz@gmx.net>
	* BUILD: add --cc=gcc to OPTS, otherwise cvs mplayer tries to compile
	  with gcc 4.0 which breaks badly

2005-05-01 Arwed v. Merkatz <v.merkatz@gmx.net>
	* shared-ffmpeg.patch: added another fix to make cvs mplayer compile
	  again (ae_lavc.c not getting compiled)

2005-04-23 Arwed v. Merkatz <v.merkatz@gmx.net>
	* BUILD, DEPENDS, DETAILS: use gcc 3.4

2005-04-20 Arwed v. Merkatz <v.merkatz@gmx.net>
	* BUILD, INSTALL, FINAL: use $INSTALL_ROOT

2005-04-20 Thomas Houssin <Thomas.Houssin@sourcemage.org>
	* DETAILS: updated to 1.0pre7

2005-02-28 Eric Sandall <eric@sandall.us>
	* CONFLICTS: Removed conflicting spell

2005-01-30 Arjan Bouter <abouter@sourcemage.org>
	* BUILD: spell_installed -> spell_ok conversion

2005-01-22 Arwed v. Merkatz <v.merkatz@gmx.net>
	* BUILD: only remove -fomit-frame-pointer for gcc 3.3.x (bug #8051)

2004-12-24 Arwed v. Merkatz <v.merkatz@gmx.net>
	* DETAILS: updated to 1.0pre6
	* BUILD, live-api-change.patch: removed patch
	* BUILD, mplayer-1.0_pre5-yuv2rbg_kludge.patch: removed patch
	* DEPENDS: added optional_depends on ladspa, moved polypaudio
	  optional_depends so its available for both cvs and release,
	  added optional_depends on X11-LIBS,
	  added --disable switches where available to the optional_depends,
	  reorganized file
	* BUILD, CONFIGURE: added option to disable building of mencoder

2004-12-16 Arwed v. Merkatz <v.merkatz@gmx.net>
	* DETAILS: updated to 1.0pre5try2

2004-12-05 Arwed v. Merkatz <v.merkatz@gmx.net>
	* DEPENDS: add --with-livelibdir switch to the live optional_depends,
	  seems to be needed by latest cvs

2004-11-07 Arwed v. Merkatz <v.merkatz@gmx.net>