@@ -1,3 +1,7 @@
+2006-01-21 Arwed v. Merkatz <v.merkatz@gmx.net>
+	* BUILD, shared-ffmpeg.patch: backported fixes for cvs version from
+	  test
+
 2005-09-02 Flavien Bridault <disk@sourcemage.org>
 	* DETAILS: Corrected SOURCE_URL[0], added two more
 
